--- a/scrapy/dangdang/scrapy.cfg
+++ b/scrapy/dangdang/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = testproject.settings
+default = dangdang.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = testproject
+project = dangdang
